--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -1,26 +1,38 @@
 .container{
-    width: fit-content;
+    /* width: fit-content;
+    margin:3px auto; */
+    /* height: 96vh; */
+    display: grid;
     height: 96vh;
-    margin:3px auto;
+    margin: 1vh auto;
+    grid-template-columns: 2fr 1fr;
 }
 
 .map-cont{
-    width: fit-content;
-    float:left;
+    /* width: fit-content;
+    float:left; */
+    width: 100%;
+    width: 100%;
+display: flex;
+justify-content: center;
 }
 
 .map-cont svg{
     height: 98vh;
     padding-right: 30px;
+
 }
 
 .text-container{
-    width: fit-content;
-    float:left;
-    height: 98vh;
+    /* width: fit-content; */
+    /* float:left; */
+    /* height: 98vh; */
     background: linear-gradient(45deg, #1d9d96, transparent);
     overflow-y: scroll;
-    width: 260px;
+    /* width: 260px; */
+    width: 100%;
+    height: 100%;
+
 }
 
 .text-container h2{
@@ -32,6 +44,8 @@
     margin-top:0px;
     min-width: 180px;
     text-align: center;
+    position: sticky;
+top: 0px;
 }
 
 /* Աջափնյակ, Դավիթաշեն, Արաբկիր, Քանաքեռ զեյթուն, Ավան */
@@ -72,4 +86,20 @@
     font-size: 13px;
     padding: 0 10px 10px 10px;
     border-bottom: solid 1px #f8f3f3;
+}
+.mobile_container {
+    grid-template-columns: 1fr;
+    grid-row-gap: 25px;
+
+}
+.mobile_container .map-cont{
+    width: 95vw;
+}
+.mobile_container .map-cont svg{
+    height: 50vh;
+    padding: 0px;
+}
+.mobile_container .text-container{
+    height: 100%;
+    margin: auto;
 }
