--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -88,16 +88,19 @@ top: 0px;
     border-bottom: solid 1px #f8f3f3;
 }
 .mobile_container {
-    grid-template-columns: auto;
-    grid-row-gap: 25px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 900px 300px;
 
 }
 .mobile_container .map-cont{
-    width: 95vw;
+    /* width: 95vw; */
+    width: 100%;
+    height: 100%;
 }
 .mobile_container .map-cont svg{
-    height: 39vh;
-    padding: 0px;
+    height: 100%;
+    padding: 0;
+    width: 100%;
 }
 .mobile_container .text-container{
     height: 100%;
