change mob styles

--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -89,7 +89,8 @@ top: 0px;
 }
 .mobile_container {
     grid-template-columns: 1fr;
-    grid-template-rows: 895px 495px;
+    grid-template-rows: 890px 490px;
+    grid-row-gap: 20px;
 
 }
 .mobile_container .map-cont{
