--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -44,6 +44,7 @@ justify-content: center;
     margin-top:0px;
     min-width: 180px;
     text-align: center;
+    position: -webkit-sticky;
     position: sticky;
 top: 0px;
 }
