--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -28,7 +28,7 @@ justify-content: center;
     /* float:left; */
     /* height: 98vh; */
     background: linear-gradient(45deg, #1d9d96, transparent);
-    overflow-y: scroll;
+    overflow-y: hidden;
     /* width: 260px; */
     width: 100%;
     height: 100%;
@@ -82,7 +82,13 @@ top: 0px;
 {
     opacity: 1;
 }
-
+#texts{
+    overflow-y: scroll;
+width: 100%;
+height: 100%;
+position: relative;
+top: 25px;
+}
 #texts p {
     font-size: 13px;
     padding: 0 10px 10px 10px;
