--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -93,30 +93,33 @@ top: 0px;
     padding: 0 10px 10px 10px;
     border-bottom: solid 1px #f8f3f3;
 }
-.mobile_container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 888px 490px;
-    grid-row-gap: 20px;
+@media only screen and (max-device-width: 901px) {
 
-}
-.mobile_container .map-cont{
-    /* width: 95vw; */
-    width: 100%;
-    height: 100%;
-}
-.mobile_container .map-cont svg{
-    height: 100%;
-    padding: 0;
-    width: 100%;
-}
-.mobile_container .text-container{
-    height: 100%;
-    margin: auto;
-}
-.mobile_container #texts p {
-    font-size: 28px;
-
-}
-.mobile_container .text-container h2 {
-    font-size: 30px;
-}
+    .container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 888px 490px;
+        grid-row-gap: 20px;
+    
+    }
+     .map-cont{
+        /* width: 95vw; */
+        width: 100%;
+        height: 100%;
+    }
+     .map-cont svg{
+        height: 100%;
+        padding: 0;
+        width: 100%;
+    }
+     .text-container{
+        height: 100%;
+        margin: auto;
+    }
+     #texts p {
+        font-size: 28px;
+    
+    }
+     .text-container h2 {
+        font-size: 30px;
+    }
+  }
