--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -93,7 +93,7 @@ top: 0px;
     padding: 0 10px 10px 10px;
     border-bottom: solid 1px #f8f3f3;
 }
-@media only screen and (max-device-width: 901px) {
+@media only screen and (max-device-width: 981px) {
 
     .container {
         grid-template-columns: 1fr;
@@ -123,3 +123,34 @@ top: 0px;
         font-size: 30px;
     }
   }
+  @media only screen and (max-width: 981px) {
+
+    .container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 888px 490px;
+        grid-row-gap: 20px;
+    
+    }
+     .map-cont{
+        /* width: 95vw; */
+        width: 100%;
+        height: 100%;
+    }
+     .map-cont svg{
+        height: 100%;
+        padding: 0;
+        width: 100%;
+    }
+     .text-container{
+        height: 100%;
+        margin: auto;
+    }
+     #texts p {
+        font-size: 28px;
+    
+    }
+     .text-container h2 {
+        font-size: 30px;
+    }
+  }
+
