some small changes

--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -80,7 +80,7 @@
     border-bottom: solid 1px #f8f3f3
 }
 
-@media only screen and (max-device-width:981px) {
+@media only screen and (max-device-width:930px) {
     .container {
         grid-template-columns: 1fr;
         grid-template-rows: 888px 490px;
@@ -112,12 +112,12 @@
     }
 }
 
-@media only screen and (max-width:981px) {
+@media only screen and (max-width:930px) {
     .container {
         /*! grid-template-columns:1fr; */
         /*! grid-template-rows:; */
         /*! grid-թrow-gap:20px; */
-        display: block;
+        display: flex;
     }
 
     .map-cont {
