--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -1,8 +1,8 @@
 .container {
-    display: grid;
+    display: flex;
     height: 96vh;
     margin: 1vh auto;
-    grid-template-columns: 2fr 1fr
+    /* grid-template-columns: 2fr 1fr */
 }
 
 .map-cont {
@@ -114,10 +114,10 @@
 
 @media only screen and (max-width:930px) {
     .container {
-        /*! grid-template-columns:1fr; */
-        /*! grid-template-rows:; */
-        /*! grid-թrow-gap:20px; */
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-row-gap: 20px;
     }
 
     .map-cont {
