--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -4,13 +4,13 @@
 
 .map-cont {
     width: 100%;
-    width: 100%;
     display: flex;
-    justify-content: center
+    justify-content: center;
+    height: 50%;
 }
 
 .map-cont svg {
-    height: 98vh;
+    /* height: 98vh; */
     padding-right: 30px
 }
 
@@ -18,7 +18,7 @@
     background: linear-gradient(45deg, #1d9d96, transparent);
     overflow-y: hidden;
     width: 100%;
-    height: 100%
+    height: 50%
 }
 
 .text-container h2 {
