--- a/illegal-buildings/style.css
+++ b/illegal-buildings/style.css
@@ -1,18 +1,15 @@
 .container {
-    display: block;
+    display: block
 }
 
 .map-cont {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    height: 50%;
+    height: 30%;
 }
 
 .map-cont svg {
-    /* height: 98vh; */
-    padding-right: 30px;
     width: 100%;
+    height: 100%;
 }
 
 .text-container {
@@ -78,19 +75,18 @@
     border-bottom: solid 1px #f8f3f3
 }
 
-@media only screen and (min-width:930px) {
+@media only screen and (min-width: 930px) {
     .container {
         display: flex;
         height: 96vh;
         margin: 1vh auto;
-        grid-template-columns: 2fr 1fr;
-
+        grid-template-columns: 2fr 1fr
     }
 
     .map-cont {
         width: 100%;
         margin-bottom: 2%;
-        height: 100%;
+        height: 100%
     }
 
     .map-cont svg {
@@ -101,7 +97,7 @@
 
     .text-container {
         width: 50%;
-        height: 100%;
+        height: 100%
     }
 
     #texts p {
